Fix scrollbar appearing on mobile

--- a/style.css
+++ b/style.css
@@ -6,9 +6,14 @@ body {
   font-family: 'Roboto Flex', sans-serif;
 
   box-sizing: border-box;
-  height: 100vh;
   display: flex;
   flex-flow: column;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+}
+
+html {
+  height: -webkit-fill-available;
 }
 
 /* MAIN */
